--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ theme: jekyll-theme-cayman
 title: Sql-ex Solutions
 description: solutions for https://www.sql-ex.ru/
 show_downloads: false
+github: false
